# black-budget

./: .gitignore  Anchor.toml  README.md
app/: README.md  full-flow-test.mjs  multi-wallet-test.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
app/src/app/: globals.css  layout.tsx  page.tsx
app/src/app/api/parse-invoice/: route.ts
app/src/app/approvals/: page.tsx
app/src/app/invoices/: page.tsx
app/src/app/landing/: layout.tsx  page.tsx
app/src/app/payments/: page.tsx
app/src/app/payroll/: page.tsx
app/src/app/policies/: page.tsx
app/src/app/proofs/: page.tsx
app/src/app/team/: page.tsx
app/src/components/: app-shell.tsx  confidential-badge.tsx  onboarding.tsx  providers.tsx  sidebar.tsx
app/src/lib/: company-context.tsx  compliance.ts  idl.ts  invoice-store.ts  merkle.ts  program.ts  supabase.ts
app/tests/: api-parse-invoice.test.ts  idl-integrity.test.ts  merkle.test.ts  pda-derivation.test.ts  rule-engine.test.ts
programs/black_budget/: Cargo.toml
programs/black_budget/src/: lib.rs
programs/black_budget/src/instructions/: init_company.rs  manage_members.rs  mod.rs  payments.rs  record_compliance_proof.rs  record_proof.rs  set_policies.rs
programs/black_budget/src/state/: company.rs  mod.rs  payment.rs
server/: .env.example  package.json  pnpm-lock.yaml
server/src/: index.ts
server/src/services/: invoice-parser.ts  proof-generator.ts  rule-engine.ts
supabase/: schema.sql
tests/: full-flow-test.mjs  full-user-simulation.mjs  generate-invoices.py  invoice-policy-test.mjs  record-proof-test.mjs
(+2 files in other folders)
