[package]
name = "black-budget"
version = "0.1.0"
description = "Private finance OS for internet-native companies"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "black_budget"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token_2022", "associated_token"] }
